2008-02-07  Tomas Frydrych  <tf@openedhand.com>

        * clutter/clutter-group.c:
	(clutter_group_query_coords):
	Take into account the anchor point when calculating the box size.

2008-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Add a note on clutter_actor_set_size()
	reguarding groups.

	* clutter/clutter-group.c: Clarify group sizing.

2008-02-07  Øyvind Kolås  <pippin@o-hand.com>

	* tests/test-shader.c: (button_release_cb): added simplified
	implementation of a box-blur shader from Gwenole Beauchesne that
	should work on GLSL implementing low-end IGPs not implementing
	dynamic branching. The original code used crashed some of these
	due to bugs in drivers or similar. Resolves bug #710.

2008-02-07  Tomas Frydrych  <tf@openedhand.com>

	* tests/test-actors.c:
	Reverted previous change.

2008-02-07  Tomas Frydrych  <tf@openedhand.com>

        * clutter/clutter-actor.c:
	(clutter_actor_set_property):
	Fixed handling of PROP_ROTATE_CENTER_Y, ROTATE_CENTER_Z

	* tests/test-actors.c:
	Adjusted to use anchor point for both group and hands.

2008-02-07  Neil J. Patel  <njp@o-hand.com>

	* tests/test-actors.c: (frame_cb), (main):
	Changed set_anchor to move_anchor.
	Changed clutter_actor_rotate x & y values to 0,0.
	Switched on scaling because it seems to work without drifting.

2008-02-07  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-script-parser.c:
	(clutter_script_get_type_from_symbol),
	(clutter_script_get_type_from_class): Use BIND_LAZY flag
	when looking at the symbols, so we don't load them all up.

	* clutter/clutter-script.c (resolve_alpha_func): Ditto as above.

2008-02-07  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-actor.c:
	(_clutter_actor_apply_modelview_transform): perform translation as
	well as anchor point adjustment based on self not being stage (and
	not by self not being an orphan).

2008-02-07  Matthew Allum  <mallum@openedhand.com>

	* clutter/clutter-stage.c: